# Multi-Agent-RAG-Hub

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/agentic_rag/: __init__.py
src/agentic_rag/agents/: __init__.py  crew.py  grader.py  models.py  router.py
src/agentic_rag/agents/config/: agents.yaml  tasks.yaml
src/agentic_rag/api/: __init__.py  main.py
src/agentic_rag/core/: __init__.py  config.py  llm.py  logging.py
src/agentic_rag/ingestion/: __init__.py  chunking.py  loader.py  pipeline.py  vectorstore.py
src/agentic_rag/tools/: __init__.py  generation_tool.py  rag_tool.py  search_tool.py
src/agentic_rag/ui/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_chunking.py  test_crew.py  test_grader.py  test_router.py
