[project]
name = "agentic-rag"
version = "0.1.0"
description = "Production-quality multi-agent Agentic RAG system built with CrewAI, ChromaDB and LiteLLM."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Agentic RAG Team" }]
keywords = ["rag", "crewai", "agents", "llm", "chromadb", "litellm"]

dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "litellm>=1.51.0",
    "chromadb>=0.5.0",
    "pypdf>=4.3.0",
    "tavily-python>=0.5.0",
    "streamlit>=1.39.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
agentic-rag-api = "agentic_rag.api.main:run"
agentic-rag-ingest = "agentic_rag.ingestion.pipeline:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]  # B008: FastAPI/Depends pattern uses function calls in defaults

[tool.ruff.lint.isort]
known-first-party = ["agentic_rag"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["agentic_rag"]
branch = true
